--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 thiserror = "1.0.56"
 sqlparser = { version = "0.41.0", features = ["visitor"] }
 tap = { version = "1.0.1" }
+clap = { version = "4.4.18", features = ["derive"] }
