--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 thiserror = "1.0.56"
 sqlparser = { version = "0.41.0", features = ["visitor"] }
 clap = { version = "4.4.18", features = ["derive"] }
+
+[dev-dependencies]
+assert_cmd = "2.0.13"
