--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ clap = { version = "4.4.18", features = ["derive"] }
 
 [dev-dependencies]
 assert_cmd = "2.0.13"
+predicates = "3.1.0"
+tempfile = "3.1.0"
+delegate = "0.12.0"
