--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -50,15 +50,12 @@ jobs:
       - run: cargo doc --document-private-items --no-deps --workspace --all-features
 
   test:
-    strategy:
-      matrix:
-        rust: [stable, beta, nightly]
     runs-on: ubuntu-latest
     steps:
       - name: Setup Rust
         uses: hecrj/setup-rust-action@v2
         with:
-          rust-version: ${{ matrix.rust }}
+          rust-version: stable
       - name: Checkout
         uses: actions/checkout@v3
       - name: Test
