--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -20,7 +20,7 @@ name = "sql-insight"
 path = "src/main.rs"
 
 [dependencies]
-sql-insight = { path = "../lib" }
+sql-insight = { path = "../lib", version = "0.1.0" }
 clap = { version = "4.4.18", features = ["derive"] }
 
 [dev-dependencies]
