--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ version = "0.1.0"
 authors = ["Takahiro Ebato <takahiro.ebato@gmail.com>"]
 homepage = "https://github.com/takaebato/sql-insight"
 repository = "https://github.com/takaebato/sql-insight"
-license = "Apache-2.0"
+license = "MIT"
 edition = "2021"
