--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -27,3 +27,4 @@ clap = { version = "4.4.18", features = ["derive"] }
 assert_cmd = "2.0.13"
 predicates = "3.1.0"
 tempfile = "3.1.0"
+tokio = { version = "1.36.0", features = ["full"] }
