--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -77,7 +77,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Coverage
-        run: cargo tarpaulin --workspace --follow-exec -o Lcov --output-dir ./coverage
+        run: cargo tarpaulin --workspace --follow-exec --engine Llvm -o Lcov --output-dir ./coverage
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
