--- a/sql-insight-cli/Cargo.toml
+++ b/sql-insight-cli/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "sql-insight-cli"
-description = "A CLI toolkit for SQL query analysis, formatting, and transformation."
+description = "A CLI utility for SQL query analysis, formatting, and transformation."
 documentation = "https://docs.rs/sql-insight-cli/"
-keywords = ["sql", "query", "cli", "toolkit", "insight"]
+keywords = ["sql", "query", "cli", "utility", "insight"]
 include = [
     "src/**/*.rs",
     "Cargo.toml",
