--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -72,7 +72,7 @@ jobs:
         uses: actions-rs/install@v0.1
         with:
           crate: cargo-tarpaulin
-          version: 0.30.0
+          version: latest
           use-tool-cache: true
       - name: Checkout
         uses: actions/checkout@v4
